--- a/index.html
+++ b/index.html
@@ -4,109 +4,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>天明联盟官方网站</title>
+    <title>华胜实验学校八三班</title>
     <link rel="shortcut icon" href="./favicon.ico">
     <link rel="stylesheet" href="./cs.css">
 </head>
 <div class="header">
   <h1>欢迎来到</h1>
-  <h1>天 明 联 盟</h1>
+    <h2>深圳市华胜实验学校</h2>
+  <h1>八年三班</h1>
 </div>
  
 <div class="navbar">
   <a href="./#">主页</a>
-  <a href="./bk/">天龙帮の博客园</a>
-  <a href="./mc/">MC暑假服务器</a>
-  <a href="https://3byyds.top:7373/">三班学习社区</a>
+  <a href="./bbs.html">三班学习社区</a>
   <a href="./stop.html" class="right">留言板</a>
 </div>
  
 <div class="row">
   <div class="side">
       <h2>简介</h2>
-      <h5>第一支建立在八三班的重文轻武类帮派，八三班第一学习联盟</h5>
-      <h2>历史</h2>
-      <h5>2022年10月3日,cfy建立帮政，取名天龙帮<br><br>
-      cfy统治前期,勤俭治帮,共同学习,招揽人才,帮力强盛,是当时班内最强的帮派;<br><br>
-      cfy统治后期,不理帮政,贪图享乐,成员们趁机发力,脱离cfy管辖,自称帮主,cfy权利衰微,实力远不如其他帮主,形成帮政割据的局面<br><br>
-      2022年11月,帮主chr逐渐合并帮政,<br>12月初向cfy宣战,cfy被吊打,向chr投降,并禅让首领之位给chr;<br>chr结束了帮政割据的局面,因为其实力强盛,被帮主们称为野猪首领<br><br>
-      2023年3月27日,原大将军zcw起兵叛变,向帮主们宣战,由于帮主们实力分散,逐一被zcw击溃. jy联合成员夹击zcw,并成功击退zcw,zcw逃亡至北方,建立大元,与天龙帮直接对峙,jy因立功成为新任大将军.<br><br>
-      3月29日,首领chr不满其野猪首领称号,将称号改为"野鸡首领"，又称"鸡王"<br>
-      ∵ "鸡王"全名为"鸡中霸王"<br>
-      ∴ "鸡王"又被称为"鸡霸"<br>
-      规定组织人数需要达到五人才可以被认定是正式组织<br>
-      4月12日，首领与大明签订盟约，保持和平与合作，一同防御北方势力，史称"鸡明之盟".<br>
-      4月18日，首领与罗锦城签订条约，大元正式纳入天龙帮版图，与天龙帮合并，大元原领土被设为战略特别行省，罗锦城被封为第二将军，负责管理北方军事事务，简称"北将"<br>
-      4月20日，修理部长管泽兴叛变，建立法西斯政权. 李泳，hh等人一同加入法西斯. <br>
-      4月23日，大明解体，并纳入天龙帮版图，yf投靠天龙帮.<br>
-      4月24日，法西斯政权国号改为纳粹. <br>
-      4月25日，zcw与野鸡首领会见，zcw重回天龙帮，并被封为王爷<br>
-      4月28日，大帮主cfy带领yf与yht脱离中央管辖，建立大明特别行政区. 名义上属于天龙帮，但军事,政治,法律均自主管辖<br>
-      4月29日，hh重回天龙帮<br>
-      5月10日，cyh加入天龙帮，被封为英语大使，为天龙帮第一位女成员<br>
-      5月18日，纳粹元首管泽兴在期中考试中败给首领chr，成立了28天之久的纳粹灭亡，管泽兴逃往大明<br>
-      5月19日，大明特别行政区内乱，经过争斗后解体，成立了21天的大明特别行政区从此解散，班内仅剩天龙帮一个正式组织，天龙帮成为了统一的帮派<br>
-      原大明成员与野鸡首领签订条约，天龙帮转变为学习组织，大明成员重回天龙帮<br>
-      2023年10月15日，因《书馆系案》引发成员内部纠纷，yht,yf独立重建大明，改国号为黎明，但保持盟友关系，结盟为 “明天联盟”，天明学习政府正式分裂为大明与天龙帮，天明政变标志着明天联盟的建立，天明学习政府的解散<br>
-      <br>把班级比作世界地图，那么政权形势图会是这样的<br>
-      <br>4月20日<br>
-      <img src="./0412.jpg" alt="加载失败" width="320" height="230">
-      <br>4月28日<br>
-      <img src="./0428.jpg" alt="加载失败" width="320" height="230">
-      <br>5月19日<br>
-      <img src="./0519.jpg" alt="加载失败" width="320" height="250">
+      <h5>华胜实验学校八年级三班，注重德智体美劳全面发展（</h5>
+      <h2>班级制度</h2>
+      <h5>同学资产：分数<br>
+          周一到周五由值日班长轮流管分<br>
+          周五下午班长统计分数<br>
+          众多加分项目，提高同学积极性<br>
+          众多扣分项目，提高同学自律能力<br>
+          etc...
       </h5>
-      <h2>帮主</h2>
-      <h5>
-      大大大帮主: chr(首领)<br>
-      大大帮主: xej(爵)<br>
-      大帮主: cfy[(明)]<br>
-      小帮主: dbr(丞相)</h5>
-      <h2>成员</h2>
-      <h5>
-      <br>drj(校尉)
-      <br>wyh(文臣)
-      <br>zcw(王爷)
-      <br>cyh(英语大使,外交官)
-      <br>jy(大将军)
-      <br>hh(禁军统领)
-      <br>yht[(明)]
-      <br>yf[(明)]
-      <br>ljc
-      </h5>
-      <h2>入帮要求及待遇</h2>
-      <h5>要求<br>
-          1.通过首领的面试<br>
-          2.通过帮主们投票<br>
-          3.自身有强大实力<br>
-          <br>
-          待遇<br>
-          1.正式成员可申请开通专属博客<br>
-          2.专属身份<br>
-          等
-      </h5>
+      
   </div>
   <div class="main">
       <h2>三班论坛app</h2>
       <h5>基于安卓的三班社区客户端<br>版本: <h4 id="tlbversion">1.5</h4></h5>
       <div class="fakeimg" style="height:180px;"><img src="./tlb.png" alt="图标加载失败" width="128" height="128"></div>
-      <div align="center" id="xz"><button style="height:50px;width:180px;" type="submit" onclick="window.location.href='./3blt_1.5.apk'">下载</button></div><br><br>
-      <h2 id="sb">首领的博客</h2>
-      <h5>chr的自我介绍</h5>
-      <div class="fakeimg" style="height:240px;"><img src="./bk/chr/yz.jpeg" alt="帅照走丢了哦" width="280" height="200"></div>
-      <div align="center"><button style="height:50px;width:180px;" type="submit" onclick="window.location.href='./bk/chr/'">点击进入</button></div>
-      <br><br>
-      <h2>副饭卡制作</h2>
-      <h5>制作一张好看的饭卡，或者是一个饭卡手环</h5>
-      <div align="center"><button style="height:50px;width:180px;" type="submit" onclick="window.location.href='/fk.jpg'">查看详情</button></div>
-      <!--<h2>大大帮主的博客</h2>
-      <h5>xej自传</h5>
-      <div class="fakeimg" style="height:240px;"><img src="./xej/dxg.jpg" alt="帅照走丢了哦" width="280" height="200"></div>
-      <div align="center"><button style="height:50px;width:180px;" type="submit" onclick="window.location.href='./xej/'">点击进入</button></div>
-      -->
+      <div align="center" id="xz"><button style="height:50px;width:180px;" type="submit" onclick="window.location.href='./3blt_1.5.apk'">下载</button></div><br><br><!--<h2>大大帮主的博客</h2>
+     
   </div>
 </div>
  
 <div class="footer">
-  <h5>天龙帮版权所有©CHR&DBR<br>tlb.3byyds.top:7373</h5>
-  </div>
+  <h5>网站管理：DBR，班主任：©️LCY版权所有<br>www.3byyds.top</h5>
+                                                                                                                                                        </div>
