--- a/index.html
+++ b/index.html
@@ -45,4 +45,5 @@
  
 <div class="footer">
   <h5>网站管理：DBR，班主任：©️LCY版权所有<br>www.3byyds.top</h5>
+  </div>
                                                                                                                                                         </div>
