--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="header">
   <h1>欢迎来到</h1>
     <h2>深圳市华胜实验学校</h2>
-  <h1>八年三班</h1>
+  <h1>八年级三班</h1>
 </div>
  
 <div class="navbar">
@@ -23,7 +23,7 @@
 <div class="row">
   <div class="side">
       <h2>简介</h2>
-      <h5>华胜实验学校八年级三班，注重德智体美劳全面发展（</h5>
+      <h5>华胜实验学校第25届八年级三班，注重德智体美劳全面发展（</h5>
       <h2>班级制度</h2>
       <h5>同学资产：分数<br>
           周一到周五由值日班长轮流管分<br>
