--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="navbar">
   <a href="./#">主页</a>
   <a href="./bbs.html">三班学习社区</a>
-  <a href="./stop.html" class="right">留言板</a>
+  <a href="./404.html" class="right">留言板</a>
 </div>
  
 <div class="row">
@@ -45,5 +45,5 @@
  
 <div class="footer">
   <h5>网站管理：DBR，班主任：©️LCY版权所有<br>www.3byyds.top</h5>
-  </div>
+</div>
                                                                                                                                                         </div>
