--- a/bbs.html
+++ b/bbs.html
@@ -5,6 +5,7 @@
     <meta http-equiv="refresh" content="1;url=https://3byyds.top:7373/">
 </head>
 <body>
-
+<h3 align="center">海内存知己，天涯若比邻</h3>
+    <h2 align="center">稍等片刻...</h2>
 </body>
 </html>
