--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h2>三班论坛app</h2>
       <h5>基于安卓的三班社区客户端<br>版本: <h4 id="tlbversion">1.5</h4></h5>
       <div class="fakeimg" style="height:180px;"><img src="./tlb.png" alt="图标加载失败" width="128" height="128"></div>
-      <div align="center" id="xz"><button style="height:50px;width:180px;" type="submit" onclick="window.location.href='./3blt_1.5.apk'">下载</button></div><br><br><!--<h2>大大帮主的博客</h2>
+      <div align="center" id="xz"><button style="height:50px;width:180px;" type="submit" onclick="window.location.href='./3blt_1.5.apk'">下载</button></div><br><br>
      
   </div>
 </div>
