--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
 </div>
  
 <div class="footer">
-  <h5>网站管理：DBR，班主任：©️LCY版权所有<br>www.3byyds.top</h5>
+  <h5>Copyright ©️2023-2024 HS Class 3 IT, All Rights Reserved.<br>www.3byyds.top</h5>
 </div>
                                                                                                                                                         </div>
