--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
   <div class="side">
       <h2>简介</h2>
       <h5>华胜实验学校第25届八年级三班，注重德智体美劳全面发展（</h5>
-      <h2>班级制度</h2>
+      <!--<h2>班级制度</h2>
       <h5>同学资产：分数<br>
           周一到周五由值日班长轮流管分<br>
           周五下午班长统计分数<br>
           众多加分项目，提高同学积极性<br>
           众多扣分项目，提高同学自律能力<br>
           etc...
-      </h5>
+      </h5>-->
       
   </div>
   <div class="main">
