--- a/tlbyyds.html
+++ b/tlbyyds.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>正在加载...</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="0;url=https://www.3byyds.top/">
 </head>
 <body>
