--- a/bbs.html
+++ b/bbs.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>正在进入三班社区...</title>
     <meta http-equiv="refresh" content="1;url=https://3byyds.top:7373/">
 </head>
