--- a/tlbyyds.html
+++ b/tlbyyds.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <h3 align="center">海内存知己，天涯若比邻</h3>
-    <h2 align="center">稍等片刻...</h2>
+    <br><h2 align="center">稍等片刻...</h2><br>
+<h4 align="center">欢迎使用天龙帮纪念尺</h4>
 </body>
 </html>
