--- a/tlbfk.html
+++ b/tlbfk.html
@@ -1,13 +1,13 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>正在加载...</title>
+    <title>饭卡信息</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="1;url=https://www.3byyds.top/">
 </head>
 <body>
-<h3 align="center">海内存知己，天涯若比邻</h3>
-    <br><h2 align="center">稍等片刻...</h2><br>
-<h4 align="center">欢迎使用天龙帮饭卡</h4>
+<h3 align="center">你好</h3>
+    <br><h2 align="center">这是一张饭卡，如果你捡到了这种饭卡，麻烦您还给八三班</h2><br>
+<h4 align="center">学校：深圳市华胜实验学校<br>班级：八年级三班</h4>
 </body>
 </html>
