--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  
 <div class="navbar">
   <a href="./#">主页</a>
-  <a href="./bbs.html">三班学习社区</a>
+  <a href="./bbs.html">三班社区(即将停服)</a>
   <a href="./404.html" class="right">留言板</a>
 </div>
  
@@ -35,10 +35,10 @@
       
   </div>
   <div class="main">
-      <h2>三班论坛app</h2>
+      <!--<h2>三班论坛app</h2>
       <h5>基于安卓的三班社区客户端<br>版本: <h4 id="tlbversion">1.5</h4></h5>
       <div class="fakeimg" style="height:180px;"><img src="./tlb.png" alt="图标加载失败" width="128" height="128"></div>
-      <div align="center" id="xz"><button style="height:50px;width:180px;" type="submit" onclick="window.location.href='./3blt_1.5.apk'">下载</button></div><br><br>
+      <div align="center" id="xz"><button style="height:50px;width:180px;" type="submit" onclick="window.location.href='./3blt_1.5.apk'">下载</button></div>--><br><br>
      
   </div>
 </div>
