--- a/tlbyyds.html
+++ b/tlbyyds.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <title>正在加载...</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="3;url=https://www.3byyds.top/">
+    <meta http-equiv="refresh" content="3;url=https://hstlb.top/">
 </head>
 <body>
 <h3 align="center">海内存知己，天涯若比邻</h3>
