--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  
 <div class="navbar">
   <a href="./#">主页</a>
-  <a href="./bbs.html">三班社区(即将停服)</a>
+  <a href="./bbs.html">三班社区</a>
   <a href="./404.html" class="right">留言板</a>
 </div>
  
