--- a/bbs.html
+++ b/bbs.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>正在进入三班社区...</title>
-    <meta http-equiv="refresh" content="1;url=https://3byyds.top:7373/">
+    <meta http-equiv="refresh" content="1;url=https://bbs.hstlb.top:9292/">
 </head>
 <body>
 <h3 align="center">海内存知己，天涯若比邻</h3>
