--- a/index.html
+++ b/index.html
@@ -35,15 +35,12 @@
       
   </div>
   <div class="main">
-      <!--<h2>三班论坛app</h2>
-      <h5>基于安卓的三班社区客户端<br>版本: <h4 id="tlbversion">1.5</h4></h5>
-      <div class="fakeimg" style="height:180px;"><img src="./tlb.png" alt="图标加载失败" width="128" height="128"></div>
-      <div align="center" id="xz"><button style="height:50px;width:180px;" type="submit" onclick="window.location.href='./3blt_1.5.apk'">下载</button></div>--><br><br>
+  <br><br>
      
   </div>
 </div>
  
 <div class="footer">
-  <h5>Copyright ©️2023-2024 HS Class 3 IT, All Rights Reserved.<br>www.3byyds.top</h5>
+  <h5>Copyright ©️2023-2024 HS Class 3 IT, All Rights Reserved.<br>hstlb.top</h5>
 </div>
                                                                                                                                                         </div>
