--- a/love/index.html
+++ b/love/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>可以成为我的朋友吗？</title>
+    <title>hh在线交友</title>
     <link rel="stylesheet" href="style.css">
      <!-- 设置网页图标 -->
      <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
