--- a/love/index.html
+++ b/love/index.html
@@ -15,7 +15,7 @@
     <div id="nameInputContainer" style="display: none;">
         <div id="sidehead-wrapper">
              <!-- 新增可点击链接元素 -->
-             <a href="" id="xiaohongshuLink" target="_blank">小红书(*^▽^*)</a>
+             <a href="" id="xiaohongshuLink" target="_blank">hh的微信(*^▽^*)</a>
              <a href="https://www.douyin.com/user/MS4wLjABAAAAYW6Q4GUNhVbVhTI0GcSNDMW_fyc04W8B3tn5RvM40Hw" id="douyinLink" target="_blank">抖音( •̀ ω •́ )</a>
              <a href="https://github.com/JayMuShui/tang-love" id="repoLink" target="_blank">源代码仓库ˋ( ° ▽、° )</a>
             <img id="sidehead" src="assets/images/sidehead.png" alt="侧头">           
