更新 tlbyyds.html

--- a/tlbyyds.html
+++ b/tlbyyds.html
@@ -3,12 +3,13 @@
     <meta charset="UTF-8">
     <title>正在加载...</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="3;url=https://hstlb.top/">
+    <!--<meta http-equiv="refresh" content="3;url=https://hstlb.top/">-->
 </head>
 <body>
 <h3 align="center">海内存知己，天涯若比邻</h3>
-    <br><h2 align="center">即将跳转三班官网...</h2><br>
+    <br><h2 align="center">纪念页</h2><br>
 <h4 align="center">欢迎使用天龙帮纪念尺</h4>
-<h5 align="center">本页面用于纪念八三班且永久可以访问，网页暂未制作，故跳转三班官网</h5>
+<h5 align="center">本页面用于纪念八三班且永久可以访问，网页暂未制作，故放置各类网址</h5>
+
 </body>
 </html>
