更新 tlbyyds.html

--- a/tlbyyds.html
+++ b/tlbyyds.html
@@ -10,8 +10,8 @@
     <br><h2 align="center">纪念页</h2><br>
 <h4 align="center">欢迎使用天龙帮纪念尺</h4>
 <h5 align="center">本页面用于纪念八三班tlb且永久可以访问，网页暂未制作，故放置本站的目录</h5>
-<a href="/">主页</a>
-<a href="/love">hh在线交友</a>
+<a href="/" align="center">主页</a><br>
+<a href="/love" align="center">hh在线交友</a>
 
 </body>
 </html>
